--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,9 @@ spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
 server.port=8080
 spring.main.allow-bean-definition-overriding=true
-
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=wtfmen
+config.path1=C:\\Users\\Yoba\\Desktop\\DATABASE.xlsx
+config.path=C:\\Users\\dmitr\\Desktop\\DATABASE.xlsx
+path="/home/yoba/Рабочий стол/DATABASE.xlsx"
