--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,5 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=wtfmen
 config.path1=C:\\Users\\Yoba\\Desktop\\DATABASE.xlsx
-config.path=C:\\Users\\dmitr\\Desktop\\DATABASE.xlsx
-path="/home/yoba/Рабочий стол/DATABASE.xlsx"
+config.path2=C:\\Users\\dmitr\\Desktop\\DATABASE.xlsx
+config.path="/home/yoba/Upload v7/DATABASE.xlsx"
