--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,29 @@
 plugins {
     id 'java'
+    id 'war'
 }
 
-group 'org.example'
-version '1.0-SNAPSHOT'
+group = 'com.example'
+
+apply plugin: 'war'
+
+war {
+    baseName = 'WebServer'
+    version =  '1.0.0'
+    manifest {
+        attributes 'Main-Class': 'com.example.demo.UploadApplication'
+    }
+}
+
 
 repositories {
     mavenCentral()
 }
-
+/*
+task wrapper(type: Wrapper) {
+    gradleVersion = '1.11'
+}
+*/
 dependencies {
     // https://mvnrepository.com/artifact/javax.inject/javax.inject
     compile group: 'javax.inject', name: 'javax.inject', version: '1'
