--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,19 @@
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
+
 server.port=8080
+
+server.ssl.key-store-type=PKCS12
+server.ssl.key-store=classpath:keystore.p12
+server.ssl.key-store-password=jebaited
+server.ssl.key-store-alias=tomcat
+
 spring.main.allow-bean-definition-overriding=true
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=wtfmen
+
 config.path1=C:\\Users\\Yoba\\Desktop\\DATABASE.xlsx
 config.path2=C:\\Users\\dmitr\\Desktop\\DATABASE.xlsx
 config.path="/home/yoba/Upload v7/DATABASE.xlsx"
+
